--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.0",
     "boostrap": "^2.0.0",
     "connect-session-sequelize": "^7.0.4",
